bugfix: correct menu display on mobiles

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -73,7 +73,7 @@ header {
         background-color: $popuot-menu-backgorund-color;
         margin: 0;
         top: 5.6em;
-        right: 19em;
+        right: 12.5em;
         padding: 0 25px;
         li {
             padding: 5px 0;
